[gd_scene load_steps=2 format=2]

[ext_resource path="res://Components/PlayerDetectionZone/PlayerDetectionZone.gd" type="Script" id=1]

[node name="PlayerDetectionZone" type="Area2D"]
modulate = Color( 0.992157, 0.737255, 0.0588235, 1 )
collision_layer = 0
collision_mask = 2
script = ExtResource( 1 )

[node name="Shape" type="CollisionShape2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
